[tool.poetry]
name = "arcee"
version = "0.1.0"
description = "Parsing / hashing NNs playbook (encoders, decoders, transformers)."
authors = ["axdg <axdg@dfant.asia>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^1.13.1"
torchtext = "^0.14.1"
torchdata = "^0.5.1"
duckdb = "^0.7.0"
pyarrow = "^11.0.0"
polars = "^0.16.8"
tensorflow-probability = "^0.19.0"
mkdocs-material = ">=9.0.0,<10.0.0"

[tool.poetry.group.tf.dependencies]
tensorflow-macos = "^2.11.0"
tensorflow-metal = "^0.7.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.2"
taskipy = "^1.10.3"

[tool.taskipy.tasks]
dev = "uvicorn app.main:app --reload"
test = "pytest -s app"
lint = "poetry run pylint -j 4 -r n arcee"
format = "black ."

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

